# qwak-test-model

./: pyproject.toml
importqwakmodelfrompackage/: model.py
tests/: test_importqwakmodelfrompackage.py
